plugins {
    id 'java'
}
group 'io.kenji'
version '1.0'


repositories {
    mavenCentral()
}


allprojects {
    apply plugin: 'java'
    sourceCompatibility = 17
    targetCompatibility = 17
    dependencies {
        implementation 'io.netty:netty-all:4.1.89.Final'
        implementation 'org.slf4j:slf4j-api:2.0.6'
        implementation 'ch.qos.logback:logback-classic:1.4.5'
        implementation 'org.springframework:spring-context:6.0.6'
        implementation 'org.apache.commons:commons-collections4:4.4'
        implementation 'org.apache.commons:commons-lang3:3.12.0'
        implementation 'org.objenesis:objenesis:3.3'
        implementation 'cglib:cglib:3.1'
        implementation 'org.javassist:javassist:3.29.2-GA'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
        implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
        compileOnly 'org.projectlombok:lombok:1.18.26'
        annotationProcessor 'org.projectlombok:lombok:1.18.26'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
        testImplementation 'junit:junit:4.13.2'
        implementation 'com.google.code.gson:gson:2.10.1'
    }
}
